tests/syntactic/qualifiers4/qualifiers4.err
Error: syntax error, unexpected BTREE datastructure qualifier, expecting end of file in file qualifiers4.dl at line 12
.decl rel3(x:symbol, y:symbol) keys x,y btree
----------------------------------------^-----
1 errors generated, evaluation aborted
